--- a/daily/[10.22].md
+++ b/daily/[10.22].md
@@ -8,8 +8,8 @@
 
 ##### [JAVA]
 
-- [ ] Java의 날짜와 시간 ([Link][https://d2.naver.com/helloworld/645609])
-- [ ] Joda-time 으로 날짜 표현하기 ([Link](https://jojoldu.tistory.com/26?category=635881))
+- [x] Java의 날짜와 시간 ([Link][https://d2.naver.com/helloworld/645609])
+- [x] Joda-time 으로 날짜 표현하기 ([Link](https://jojoldu.tistory.com/26?category=635881))
 
 
 
@@ -21,7 +21,7 @@
 
 ##### [IntellJ]
 
-* [ ] JPA ERD ([Link](https://jojoldu.tistory.com/517?category=678716))
+* [x] JPA ERD ([Link](https://jojoldu.tistory.com/517?category=678716))
 
 
 
